--- a/urunler/templates/sepet.html
+++ b/urunler/templates/sepet.html
@@ -6,32 +6,40 @@
         <div class="row">
             {% if sepet|length > 0 %}
         {% for urun in sepet %}
-          <div class="col-4 ">
-              <div class="card"">
-                <img src="{{urun.urun.resim.url}}" height="200" class="card-img-top" alt="...">
-                <div class="card-body">
-                <div class="d-flex justify-content-between">
-                    <h5 class="card-title">{{urun.urun.isim}}</h5>
-                    <p>Satıcı: {{urun.urun.satici.username}}</p>
+            <div class="col-4 ">
+                <div class="card"">
+                        <img src="{{urun.urun.resim.url}}" height="200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between">
+                                <h5 class="card-title">{{urun.urun.isim}}</h5>
+                                <p>Satıcı: {{urun.urun.satici.username}}</p>
+                            </div>
+                            <p>Kategori: {{urun.urun.kategori.isim}}</p>
+                            <!-- Manytomany yazdırılması -->
+                            {% for alt in urun.altkategori.all %}
+                            <small>{{alt.isim}}</small>
+                            {% endfor %}
+                            <p class="card-text">{{urun.urun.aciklama}}</p>
+                            <p>Fiyat: {{urun.urun.fiyat}} TL </p>
+                            <p>Adet: {{urun.adet}}</p>
+                            <p>Toplam Fiyat: {{urun.toplamFiyat}}</p>
+                    </div>
                 </div>
-                
-                <p>Kategori: {{urun.urun.kategori.isim}}</p>
-                <!-- Manytomany yazdırılması -->
-                {% for alt in urun.altkategori.all %}
-                <small>{{alt.isim}}</small>
-                {% endfor %}
-                <p class="card-text">{{urun.urun.aciklama}}</p>
-                <p>Fiyat: {{urun.urun.fiyat}} TL </p>
-                <p>Adet: {{urun.adet}}</p>
-                <p>Toplam Fiyat: {{urun.toplamFiyat}}</p>
-                
             </div>
-            </div>
+            {% endfor %}
+            {% else %}
+            <h1>Eşleşen ürün bulunmamaktadır</h1>
+            {% endif %}
         </div>
-        {% endfor %}
-        {% else %}
-        <h1>Eşleşen ürün bulunmamaktadır</h1>
-        {% endif %}
-        </div>
+
+        <p class="mt-4 fs-3">
+            Toplam Fiyat : {{toplamFiyat}}
+        </p>
+
+        <form action="" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="Ödeme Yap" class="btn btn-primary mt-2">
+        </form>
+
     </div>
 {% endblock content %}
