--- a/urunler/templates/includes/_navbar.html
+++ b/urunler/templates/includes/_navbar.html
@@ -1,6 +1,6 @@
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="/">Neos Ticaret</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,11 +45,7 @@
                       {% endfor %}
                     </ul>
                   {% endfor %}
-
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
               </li>
             </ul>
             <form class="d-flex" action="/" role="search method='GET">
